fix: height auto resizing on mobile on scroll

--- a/src/app/(home)/_sections/StMich.module.css
+++ b/src/app/(home)/_sections/StMich.module.css
@@ -45,6 +45,7 @@
 	max-height: 900px; */
 	display: flex;
 	justify-content: center;
+	will-change: transform;
 
 	/* @media screen and (min-height: 1000px) and (max-height: 1366px) and (width <= 1024px) {
 		height: calc(
